<resources>
    <string name="app_name">NewMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="Boton1">ENTRAR</string>
    <string name="detalles">DETALLES DEL EVENTO</string>
    <string name="nom_evento">NOMBRE DEL EVENTO:</string>
    <string name="HORARIO">HORARIO:</string>
    <string name="LUGAR">LUGAR:</string>
    <string name="NOMBRE">NOMBRE DEL PONENTE:</string>
    <string name="OCUPACION">TITULO Y ESPECIALIDAD DEL PONENETE</string>
    <string name="EXPERIENCIA">EXPERIENCIA DEL PONENTE</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
